--- a/Develop/Develop.csproj
+++ b/Develop/Develop.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\BunnyTail.ObjectProjection\BunnyTail.ObjectProjection.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="Usa.Smart.Analyzers.JapaneseComment" Version="1.4.0" />
+  </ItemGroup>
+
 </Project>
