--- a/BunnyTail.ObjectProjection/BunnyTail.ObjectProjection.csproj
+++ b/BunnyTail.ObjectProjection/BunnyTail.ObjectProjection.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net10.0;net9.0;net8.0</TargetFrameworks>
     <CodeAnalysisRuleSet>..\Analyzers.ruleset</CodeAnalysisRuleSet>
     <NoWarn>$(NoWarn);NU5118;NU5129</NoWarn>
   </PropertyGroup>
@@ -28,10 +28,6 @@
 
   <ItemGroup>
     <PackageReference Include="SourceGenerateHelper" Version="1.4.2" GeneratePathProperty="true" PrivateAssets="all" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Usa.Smart.Analyzers.JapaneseComment" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
